[package]
name = "pyphyrs"
version = "0.1.0"
edition = "2021"

[lib]
name = "pyphyrs"
crate-type = ["cdylib"]

[dependencies]
nalgebra = "0.32.2"
pyo3 = "0.18.1"

[features]
default = ["python"]
python = ["pyo3/extension-module"]

# package features
f64precision = []

# benchmark
bench = []

# for testing
timings = []


[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
overflow-checks = true

# for benchmarking
[profile.test]
opt-level = 3
lto = true
debug = false
debug-assertions = false
overflow-checks = true
